--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: Check Go version
+      - name: Echo Go version
         run: go version
+
+      - name: Run Go Test
+        run: go test ./...
