--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,6 @@ jobs:
 
       - name: Build notely
         run: ./scripts/buildprod.sh
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-484111/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-484111 --max-instances=4
