--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,5 +21,11 @@ jobs:
       - name: Build notely
         run: ./scripts/buildprod.sh
 
+      - name: Google Cloud Auth
+        uses: google-github-actions/auth@v3
+        with:
+          project_id: ${{ vars.GCP_PROJECT_ID }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Deploy to Cloud Run
-        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-484111/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-484111 --max-instances=4
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-484111/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project ${{ vars.GCP_PROJECT_ID }} --max-instances=4
