--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
 
+env:
+  GCP_PROJECT_ID: notely-484111
+  DOCKER_IMAGE_URL: us-central1-docker.pkg.dev/notely-484111/notely-ar-repo/notely:latest
+
 jobs:
   deploy:
     name: Deploy
@@ -24,8 +28,11 @@ jobs:
       - name: Google Cloud Auth
         uses: google-github-actions/auth@v3
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          project_id: ${{ env.GCP_PROJECT_ID }}
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Build Container Image
+        run: gcloud builds submit --tag ${{ env.DOCKER_IMAGE_URL }} .
+
       - name: Deploy to Cloud Run
-        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-484111/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project ${{ vars.GCP_PROJECT_ID }} --max-instances=4
+        run: gcloud run deploy notely --image ${{ env.DOCKER_IMAGE_URL }} --region us-central1 --allow-unauthenticated --project ${{ env.GCP_PROJECT_ID }} --max-instances=4
