--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       - name: Build Container Image
-        run: gcloud builds submit --tag ${{ env.DOCKER_IMAGE_URL }} .
+        run: gcloud builds submit . --tag ${{ env.DOCKER_IMAGE_URL }} --suppress-logs
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image ${{ env.DOCKER_IMAGE_URL }} --region us-central1 --allow-unauthenticated --project ${{ env.GCP_PROJECT_ID }} --max-instances=4
